apps/paperless-ai/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: paperless-ai
    namespace: paper
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web239,websecure239
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd,authelia-forwardauth-authelia@kubernetescrd,paper-paperless-ai-api-key@kubernetescrd
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:6LMLUdbwYCfAEiDDTYK3twtLLO9fdOQtW+RKFvPCRu/C,iv:ubIqdf2VM7H3/S6lBCWCAjqq8vM25bLQAntajH+8jkQ=,tag:PE6Qlax9AupTxHzgW7V8WA==,type:str]
          secretName: wildcard-cloudflare-production-02
    rules:
        - host: ENC[AES256_GCM,data:Shkmx1bnsmqHeeF9NhQD+8CC1kx0y0x7s0aE/nCXgmXO,iv:cR7nf4uEFiSsftLKPR9AjvlEPe4Tq309oW4FKekxR8s=,tag:ekGjDwMZ0TfrcJEGykollA==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: paperless-ai
                        port:
                            number: 3000
sops:
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDMlk3S0VEVmRTTnpUVHg1
[...]
            e4I2hy6FHWYOaW8WIpTWd6l5hz01TAXzbtEbwbIqEb817KO23HuE1A==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByUFVXTGZ1bFFMd3AvS1Fl
[...]
            sANPckc2SQcDqvnQW+/F643xZHb04TjS65nCYEsGOtC8x2OYvnMIRw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-12-17T09:41:46Z"
    mac: ENC[AES256_GCM,data:EX5enmNEcq1t/gWf7e+rnuSXjyGf3oeXOt8HHZPe/ATJZbSoHgXm5g9LoHrSY24o1GKvtENnnLerR9efLu0tX4CyoLST6puFRRFjG08hulZHUOroMvF5bwBAhpHKVhcJh08ObJ8hIkVWGjPiTno2zB8ziHlLg73TS0kiD7+EyzU=,iv:TmvOAZnFnf3XUx1HPaMgoCtRDVEUDHoC34oR2PjKtCE=,tag:UjxvB2frmd/PdPUdUEhGkA==,type:str]
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|argocdServerAdminPassword|oidc.config|commonName|literals|.*awsAccessKeyId|.*awsSecretAccessKey|.*defaultAdminPassword|apiToken|accountId|rootPassword|replicationPassword|adminPassword|root_url|client_secret|auth_url|api_url|PIHOLE_DOMAIN|TUNNEL_DNS_UPSTREAM|customDnsEntries|securityTokenKey|emailRecipients|.*provider_url|.*redirect_url|.*accesskeyEncryption|SEMAPHORE_WEB_ROOT|token|cookieEnc [...]
    version: 3.11.0
